@@ -1,0 +1,69 @@
+/*
+ * Move_Line_Up.bsh - a BeanShell macro for moving lines up.
+ *
+ * Copyright (C) 2004 Nicholas O'Leary nol@deferential.net
+ * 
+ * :mode=beanshell:tabSize=3:indentSize=3:maxLineLen=0:noTabs=true:
+ * :indentOnTab=true:indentOnEnter=true:folding=explicit:collapseFolds=1:
+ *
+ * {{{ License
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with the jEdit program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ * }}}
+ *
+ *  
+ * Changes:
+ *  05-Jul-04: Initial Implementation
+ *
+ * $Id$
+ */
+
+// Get the current line
+int lineNo = textArea.getCaretLine();
+
+// Make sure we are allowed to edit the buffer, and that we're not at the start
+if (!buffer.isEditable() || lineNo == 0) {
+   textArea.getToolkit().beep();
+   return 1;
+}
+// Start the edit
+buffer.beginCompoundEdit();
+// Get the caret position on the line
+int lineCaretOffset = textArea.getCaretPosition()-buffer.getLineStartOffset(lineNo);
+// Get the line text to move
+String line = buffer.getLineText(lineNo);
+// Remove the line
+textArea.deleteLine();
+// Get the position to insert the line at
+int newLinePos = buffer.getLineStartOffset(lineNo-1);
+// Inser the line
+buffer.insert(newLinePos,line+"\n");
+// Move the cursor into the same position on the new line
+textArea.setCaretPosition(newLinePos+lineCaretOffset);
+// Indent this line
+buffer.indentLine(lineNo-1,true);
+// End the edit
+buffer.endCompoundEdit();
+
+/*
+
+Macro index data (in DocBook format)
+
+   <listitem>
+      <para><filename>Move_Line_Up.bsh</filename></para>
+      <abstract><para>Moves the current line up one, with automatic 
+      indentation.</para></abstract>   
+      </listitem>
+
+*/
